# File-Caching-With-Redis

./: .env.sample  .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/auth/: models.py  router.py  service.py  utils.py
app/auth/schemas/: auth_response_schema.py  auth_schemas.py  forgot_password_schema.py  login_schema.py  register_schema.py  reset_password_schema.py
app/cache/: model.py  router.py  service.py
app/cache/schemas/: upload_response_schema.py  upload_schema.py
app/caches/: service.py
app/common/utils/: dependencies.py  logger.py  response.py  router.py  utils.py
app/database/: main.py
app/file/: model.py  router.py  service.py
app/file/schemas/: upload_response_schema.py  upload_schema.py
app/mail/: main.py  processor.py  service.py
app/mail/template/: base.j2  password_reset.j2  verify_mail.j2
app/mail/templates/: base.j2  verify_mail.j2
app/redis/: main.py
app/uploads/: 1. just like Airbnb.txt  Readme.txt
app/user/: models.py  router.py  service.py
app/user/schemas/: user_response_schema.py  user_schemas.py
migration/: env.py
migration/versions/: 7d05469b161b_initial_alembic_update_table.py  ad41a684ff4c_updating_tables.py  dcf6e21502f0_updating_tables.py
settings/: config.py
