[project]
name = "january-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Elijah",email = "oreelijah33@gmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "celery (>=5.6.2,<6.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "stripe (>=14.4.1,<15.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
